--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -6,3 +6,8 @@ body {
 #game {
     border: solid 1px #FFFFFF;
 }
+#container {
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+}
