--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -29,10 +29,12 @@ h2 {
 }
 #full-page {
     width: 1200px;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
     background-color: #000000;
     padding: 20px;
+    box-shadow: 0px 0px 20px 5px #000000;
 }
 #right-container {
     float: left;
