--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,5 +1,3 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
-
 /** http://nicolasgallagher.com/micro-clearfix-hack/ */
 .cf:before,
 .cf:after {
@@ -14,35 +12,25 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 body {
-    background-color: #202020;
-    font-family: Courier;
-    color: #FFFFFF;
+    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
-h1 {
-    font-size: 40px;
-}
-h2 {
-    font-size: 30px;
-}
+
 #game {
-    border: solid 1px #FFFFFF;
+    background-color: #000;
 }
 #full-page {
-    width: 1200px;
-    margin-top: 30px;
+    width: 1000px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #000000;
-    padding: 20px;
-    box-shadow: 0px 0px 20px 5px #000000;
 }
 #right-container {
     float: left;
-    width: 200px;
+    width: 150px;
+    padding-left: 50px;
 }
 #center-container {
     float: left;
-    width: 900px;
+    width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
